# gsttap

./: AUTHORS  COPYING  Makefile.am  README  README.md  configure.ac
src/: Makefile.am  gstdmpdec.c  gstdmpdec.h  gstdmpenc.c  gstdmpenc.h  gsttapconvert.c  gsttapdec.c  gsttapdec.h  gsttapenc.c  gsttapenc.h  gsttapfiledec.c  gsttapfileenc.c  gsttapfileenc.h  plugin.c
tap/: Makefile.am  gstbasetapcontainerdec.c  gstbasetapcontainerdec.h  gstdmpdec.c  gstdmpdec.h  gsttapconvert.c  gsttapconvert.h  gsttapfiledec.c  gsttapfiledec.h  gsttapfileenc.c  gsttapfileenc.h  plugin.c
tapdec/: Makefile.am  gsttapdec.c
tapenc/: Makefile.am  gsttapenc.c
